fix: enormous font size in code blocks on Mobile IOS (webkit)

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -15,3 +15,7 @@
   --ifm-color-primary-lightest: rgb(79, 203, 227);
   --ifm-code-font-size: 95%;
 }
+
+body{
+  -webkit-text-size-adjust: 100%;
+}
